# without-sys-path-append

./: README.md  pyproject.toml
fuga/: b.py
